# VoxMorph

./: .gitignore  AIR_REDESIGN_PLAN.md  CMakeLists.txt  DESIGN.md  FEATURE_PLAN.md  GITHUB_BUILD_GUIDE.md  GRAIN_AB_REPORT.md  HANDOVER.md  OBS_SETUP_GUIDE.md  README.md
.github/workflows/: build.yml
VoxMorph/: BUILD_GUIDE.md  CMakeLists.txt
VoxMorph/scripts/: install-mac.command
VoxMorph/src/: PluginProcessor.h
VoxMorph/test/: analyze.py
dsp/: AEIOUCharacterPresets.h  MatchingEngine.h  PsolaEngine.h  SampleTargetCatalog.h  VoiceAnalyzer.h  VowelAdaptiveWarp.h
scripts/: preinstall
src/: PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
test/: analyze.py  offline_test.cpp
